# mcp-calculator

./: main.py  mcp_config.json  mcp_pipe.py  pyproject.toml
.github/: build.yml
.github/workflows/: build.yml
servers/: calculator.py  trade_target.py  trade_traget.py
servers/memos/: client.py
